--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body class="debug">
     <header>
         <section>
-            <nav>
-                <div></div>
-                <div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+            <nav class="menu">
+                <div class="container_roba">
+                    <div><img class="logo" src="./assets/img/logo-small.png" alt=""></div>
+                    <a class="link_intera" href="">Perch&#232; Dropbox</a>
+                    <a class="link_intera" href="">Funzioni</a>
+                    <a class="link_intera" href="">Piani e Prezzi</a>
                 </div>
-                <div>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <a href=""></a>
+            </nav>
+        </section>
+        <section>
+            <nav class="menu">
+                <div class="container_roba">
+                    <a class="link_intera" href="">Supporto</a>
+                    <a class="link_intera" href="">Contatta l'ufficio vendite</a>
+                    <a class="link_intera" href="">Accedi</a>
+                    <a class="link_intera" href="">Inizia</a>
                 </div>
             </nav>
         </section>
