--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <section>
             <nav class="menu">
-                <div class="container_roba">
+                <div class="container_link">
                     <div><img class="logo" src="./assets/img/logo-small.png" alt=""></div>
                     <a class="link_intera" href="">Perch&#232; Dropbox</a>
                     <a class="link_intera" href="">Funzioni</a>
@@ -22,7 +22,7 @@
         </section>
         <section>
             <nav class="menu">
-                <div class="container_roba">
+                <div class="container_link">
                     <a class="link_intera" href="">Supporto</a>
                     <a class="link_intera" href="">Contatta l'ufficio vendite</a>
                     <a class="link_intera" href="">Accedi</a>
@@ -32,7 +32,15 @@
         </section>
     </header>
     <main>
-
+        <div class="container_jumbo">
+            <section>
+                <h1></h1>
+                <div class="jumbo">
+                    <div></div>
+                    <div></div>
+                </div>
+            </section>
+        </div>
 
     </main>
     <footer>
