--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
     <main>
         <div class="container_jumbo">
             <section>
-                <h1></h1>
+                <div id="container_h1">
+                    <h1></h1>
+                </div>
                 <div class="jumbo">
-                    <div></div>
-                    <div></div>
+                    <div id="pragrafo_pg">
+                        <p></p>
+                        <a href=""></a>
+                        <p></p>
+                        <a href=""></a>
+                    </div>
+                    <div id="jumbo_img_container"><img src="" alt=""></div>
                 </div>
             </section>
         </div>
