add payment plans

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="debug">
+    <!--menu-->
     <header>
         <section>
             <nav class="menu">
@@ -32,13 +33,14 @@
         </section>
     </header>
     <main>
+        <!--jumbo-->
         <div class="container_jumbo">
             <section>
                 <div id="container_h1">
                     <h1></h1>
                 </div>
                 <div class="jumbo">
-                    <div id="pragrafo_pg">
+                    <div id="pragrafo_jum">
                         <p></p>
                         <a href=""></a>
                         <p></p>
@@ -49,6 +51,22 @@
             </section>
         </div>
 
+        <!--piani di pagamento-->
+        <div id="container_title_selection_pg">
+            <h2 id="titolo_paini_pag"></h2>
+            <p id="selezione_fatt"></p>
+        </div>
+        <div>
+
+
+
+
+
+
+
+
+
+        </div>
     </main>
     <footer>
 
