--- a/index.html
+++ b/index.html
@@ -56,10 +56,30 @@
             <h2 id="titolo_paini_pag"></h2>
             <p id="selezione_fatt"></p>
         </div>
-        <div>
+
+        <div id="container_piani_pagamento_top">
+            <row id="row_p_p_top">
+                <div class="testa_p_p"></div>
+                <div class="testa_p_p"></div>
+                <div class="testa_p_p"></div>
+            </row>
+        </div>
 
 
+        <div id="container_piani_pagamento_middle">
+            <row id="row_p_p_middle">
+                <div class="corpo_p_p"></div>
+                <div class="corpo_p_p"></div>
+                <div class="corpo_p_p"></div>
+            </row>
+        </div>
 
+        <div id="container_piani_pagamento_buttom">
+            <section id="sub_container">
+                <div id="enterprise_top"></div>
+                <div id="enterprise_buttom"></div>
+            </section>
+        </div>
 
 
 
