add menu and jumbo

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DropBox</title>
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="debug">
+<body class="">
     <!--menu-->
     <header>
         <section>
@@ -27,7 +30,7 @@
                     <a class="link_intera" href="">Supporto</a>
                     <a class="link_intera" href="">Contatta l'ufficio vendite</a>
                     <a class="link_intera" href="">Accedi</a>
-                    <a class="link_intera" href="">Inizia</a>
+                    <a id="button_menu" href="">Inizia</a>
                 </div>
             </nav>
         </section>
@@ -37,16 +40,25 @@
         <div class="container_jumbo">
             <section>
                 <div id="container_h1">
-                    <h1></h1>
+                    <h1>Tutto ci&#242; che ti serve per il
+                        <br>lavoro, in un unico posto
+                    </h1>
                 </div>
                 <div class="jumbo">
-                    <div id="pragrafo_jum">
-                        <p></p>
-                        <a href=""></a>
-                        <p></p>
-                        <a href=""></a>
+                    <div id="container_pragrafo_jum">
+                        <p id="paragrafo_jum_top">
+                            Finalmente tutti i tuoi strumenti, contenuti e
+                            <br>collaboratori sono accessibili dallo stesso posto.
+                            <br>Dropbox Buisness &#232; pi&#249; di uno spazio di
+                            <br>archiviazione sicuro&#58; &#232; un modo intelligente e
+                            <br>integrato per ottimizzare il flusso di lavoro
+                            <br>esistente.
+                        </p>
+                        <a id="button_jumbo" href="">Inizia la tua prova gratuita</a>
+                        <p id="paragrafo_jum_bottom">Annulla in qualsiasi momento</p>
+                        <a href="#"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
-                    <div id="jumbo_img_container"><img src="" alt=""></div>
+                    <div id="jumbo_img_container"><img id="img_jumbo" src="./assets/img/jumbo.png" alt=""></div>
                 </div>
             </section>
         </div>
