shede pagamenti work in progress

--- a/index.html
+++ b/index.html
@@ -64,23 +64,56 @@
         </div>
 
         <!--piani di pagamento-->
-        <div id="container_title_selection_pg">
-            <h2 id="titolo_paini_pag"></h2>
-            <p id="selezione_fatt"></p>
-        </div>
+        <div id="container_top_card">
+            <section id="container_title_pg">
+                <h2 id="titolo_paini_pag">
+                    Trova il piano buisness che fa per te
+                </h2>
+            </section>
 
+        </div>
+        <div id="container_selection_pg">
+            <section id="s_container_section_pg">
+                <p id="selezione_fatt"><input type="radio"> Fatturazione mensile</p>
+                <p id="selezione_fatt"><input type="radio"> Fatturazione annuale</p>
+            </section>
+        </div>
         <div id="container_piani_pagamento_top">
             <row id="row_p_p_top">
-                <div class="testa_p_p"></div>
-                <div class="testa_p_p"></div>
-                <div class="testa_p_p"></div>
+                <div class="testa_p_p">
+                    <div class="container_testa">
+                        <p><i class="fa-solid fa-user"></i> Singolo</p>
+                    </div>
+                </div>
+                <div class="testa_p_p">
+                    <div class="container_testa">
+                        <p></i><i class="fa-solid fa-users"></i> Team</p>
+                    </div>
+                </div>
+                <div class="testa_p_p">
+                    <div class="container_testa">
+                        <p><i class="fa-solid fa-building"></i></i> Azienda</p>
+                    </div>
+                </div>
             </row>
         </div>
-
-
         <div id="container_piani_pagamento_middle">
             <row id="row_p_p_middle">
-                <div class="corpo_p_p"></div>
+                <div class="corpo_p_p">
+                    <div class="container_corpo">
+                        <h2 class="titolo_scheda">Professional</h2>
+                        <p class="prezzo">&#8364; 12.00</p>
+                        <p class="periodo_di_pag">/mese</p>
+                        <p class="vantaggi"><i class="fa-solid fa-user"></i> 1 Utente</p>
+                        <p class="vantaggi"><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviaziore sicuro
+                        </p>
+                        <p class="vantaggi"><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivit&#224;
+                            premium
+                            <br>e condivisone file semplice e
+                            <br>sicura
+                        </p>
+                    </div>
+                </div>
                 <div class="corpo_p_p"></div>
                 <div class="corpo_p_p"></div>
             </row>
