--- a/index.html
+++ b/index.html
@@ -100,37 +100,47 @@
         <div id="container_piani_pagamento_middle">
             <row id="row_p_p_middle">
                 <div class="corpo_p_p">
-                    <div class="container_corpo">
+                    <div class="container_corpo_top">
                         <h2 class="titolo_scheda">Professional</h2>
                         <p class="prezzo">&#8364; 12.00</p>
                         <p class="periodo_di_pag">/mese</p>
-                        <p class="vantaggi"><i class="fa-solid fa-user"></i> 1 Utente</p>
-                        <p class="vantaggi"><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviaziore sicuro
-                        </p>
-                        <p class="vantaggi"><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivit&#224;
-                            premium
-                            <br>e condivisone file semplice e
-                            <br>sicura
-                        </p>
                     </div>
+
+
+
+                    <div class="container_corpo_middle">
+                        <div class="icone">
+                            <!--<i class="fa-solid fa-user"></i>
+                            <i class="fa-solid fa-folder"></i>
+                            <i class="fa-solid fa-share-nodes"></i>-->
+                        </div>
+                        <div class="container_vantaggi">
+                            <!--<p class="vantaggi">1 Utente</p>
+                            <p class="vantaggi">5 TB di spazio di archiviaziore sicuro
+                            </p>
+                            <p class="vantaggi"> Funzioni di produttivit&#224;
+                                premium
+                                <br>e condivisone file semplice e
+                                <br>sicura
+                            </p>-->
+                        </div>
+                    </div>
+
+
+
+                    <!--<a id="button_prova_free" href="">Prova gratis per 30 giorni</a>-->
+
                 </div>
                 <div class="corpo_p_p"></div>
                 <div class="corpo_p_p"></div>
             </row>
         </div>
-
         <div id="container_piani_pagamento_buttom">
             <section id="sub_container">
                 <div id="enterprise_top"></div>
                 <div id="enterprise_buttom"></div>
             </section>
         </div>
-
-
-
-
-
-
         </div>
     </main>
     <footer>
