prima scheda finita

--- a/index.html
+++ b/index.html
@@ -100,40 +100,59 @@
         <div id="container_piani_pagamento_middle">
             <row id="row_p_p_middle">
                 <div class="corpo_p_p">
-                    <div class="container_corpo_top">
+                    <div class="container_corpo">
                         <h2 class="titolo_scheda">Professional</h2>
                         <p class="prezzo">&#8364; 12.00</p>
                         <p class="periodo_di_pag">/mese</p>
-                    </div>
 
-
-
-                    <div class="container_corpo_middle">
-                        <div class="icone">
-                            <!--<i class="fa-solid fa-user"></i>
-                            <i class="fa-solid fa-folder"></i>
-                            <i class="fa-solid fa-share-nodes"></i>-->
-                        </div>
                         <div class="container_vantaggi">
-                            <!--<p class="vantaggi">1 Utente</p>
-                            <p class="vantaggi">5 TB di spazio di archiviaziore sicuro
-                            </p>
-                            <p class="vantaggi"> Funzioni di produttivit&#224;
-                                premium
-                                <br>e condivisone file semplice e
-                                <br>sicura
-                            </p>-->
+                            <div class="icons">
+                                <i class="fa-solid fa-user"></i>
+                                <i class="fa-solid fa-folder"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                            <div class="text_vantaggi">
+                                <p class="vantaggi"> 1 Utente</p>
+                                <p class="vantaggi"> 5 TB di spazio di archiviaziore
+                                    sicuro
+                                </p>
+                                <p class="vantaggi"> Funzioni di produttivit&#224;
+                                    premium
+                                    <br>e condivisone file semplice e
+                                    <br>sicura
+                                </p>
+                            </div>
+                        </div>
+                        <a class="button_prova_free" href="">Prova gratis per 30 giorni</a>
+                        <p>oppure <a class="pay_now" href="">acquista ora</a></p>
+                        <hr>
+                        <h4>Punti salienti del piano</h4>
+                        <div class="container_opzioni">
+                            <div class="check_icon">
+                                <i class="fa-solid fa-check"></i>
+                                <i class="fa-solid fa-check"></i>
+                            </div>
+                            <div class="text_opzioni">
+                                <p class="opzioni">Inviare file fino a 100 GB con
+                                    <br>Dropbox Transfert
+                                </p>
+                                <p class="opzioni">Cartelle offline su dispositivi
+                                    <br>mobili
+                                </p>
+                            </div>
                         </div>
                     </div>
-
-
-
-                    <!--<a id="button_prova_free" href="">Prova gratis per 30 giorni</a>-->
-
                 </div>
-                <div class="corpo_p_p"></div>
-                <div class="corpo_p_p"></div>
-            </row>
+        </div>
+
+
+
+
+
+        </div>
+        <div class="corpo_p_p"></div>
+        <div class="corpo_p_p"></div>
+        </row>
         </div>
         <div id="container_piani_pagamento_buttom">
             <section id="sub_container">
