--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
                         <h2 class="titolo_scheda">Professional</h2>
                         <p class="prezzo">&#8364; 12.00</p>
                         <p class="periodo_di_pag">/mese</p>
-
                         <div class="container_vantaggi">
                             <div class="icons">
                                 <i class="fa-solid fa-user"></i>
@@ -116,10 +115,8 @@
                                 <p class="vantaggi"> 5 TB di spazio di archiviaziore
                                     sicuro
                                 </p>
-                                <p class="vantaggi"> Funzioni di produttivit&#224;
-                                    premium
-                                    <br>e condivisone file semplice e
-                                    <br>sicura
+                                <p class="vantaggi"> Funzioni di produttivit&#224; premium
+                                    e condivisone file semplice e sicura
                                 </p>
                             </div>
                         </div>
@@ -129,8 +126,8 @@
                         <h4>Punti salienti del piano</h4>
                         <div class="container_opzioni">
                             <div class="check_icon">
-                                <i class="fa-solid fa-check"></i>
-                                <i class="fa-solid fa-check"></i>
+                                <p id="check_1">&#10003;</p>
+                                <p id="check_2">&#10003;</p>
                             </div>
                             <div class="text_opzioni">
                                 <p class="opzioni">Inviare file fino a 100 GB con
@@ -143,15 +140,196 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
+                <div class="corpo_p_p">
+                    <div class="container_corpo">
+                        <h2 class="titolo_scheda">Advenced</h2>
+                        <p class="prezzo">&#8364; 18.00</p>
+                        <p class="periodo_di_pag">/utente/mese</p>
+                        <div class="container_vantaggi">
+                            <div class="icons">
+                                <i class="fa-solid fa-users"></i>
+                                <i class="fa-solid fa-folder"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                            <div class="text_vantaggi">
+                                <p class="vantaggi"> 3 o pi&#249; Utenti</p>
+                                <p class="vantaggi"> Tutto lo spazio di cui ha bisogno il
+                                    tuo team
+                                </p>
+                                <p class="vantaggi"> Sofisticate funzioni di controllo e
+                                    per tenere al sicuro tutti i file del tuo team
+
+                                </p>
+                            </div>
+                        </div>
+                        <a class="button_prova_free" href="">Prova gratis per 30 giorni</a>
+                        <p>oppure <a class="pay_now" href="">acquista ora</a></p>
+                        <hr>
+                        <h4>Punti salienti del piano</h4>
+                        <div class="container_opzioni">
+                            <div class="check_icon">
+                                <p id="check_3">&#10003;</p>
+                                <p id="check_4">&#10003;</p>
+                                <p id="check_5">&#10003;</p>
+                                <p id="check_6">&#10003;</p>
+                                <p id="check_7">&#10003;</p>
+                            </div>
+                            <div class="text_opzioni">
+                                <p class="opzioni">Nessun limite di spazio per i file
+
+                                </p>
+                                <p class="opzioni">Cartelle offline su dispositivi
+                                    <br>mobili
+                                </p>
+                                <p class="opzioni">Risparmio del 50% rispetto alle
+                                    <br>iscrizioni singole
+                                </p>
+                                <p class="opzioni">Possibilit&#224; di inserire nuovi
+                                    <br>membri del team
+                                </p>
+                                <p class="opzioni">Gestione dei permessi in base ai
+                                    <br>ruoli
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+                <div class="corpo_p_p">
+                    <div class="container_corpo">
+                        <h2 class="titolo_scheda">Enterprice</h2>
+                        <p class="prezzo">Contattaci</p>
+                        <p class="periodo_di_pag">-</p>
+                        <div class="container_vantaggi">
+                            <div class="icons">
+                                <i class="fa-solid fa-user"></i>
+                                <i class="fa-solid fa-folder"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                            <div class="text_vantaggi">
+                                <p class="vantaggi"> 10 o pi&#249; utenti</p>
+                                <p class="vantaggi">Soluzioni personalizzabili per
+                                    la tua azienda
+                                </p>
+                                <p class="vantaggi"> Assistenza personalizzata per
+                                    aiutare gli amministratori in una
+                                    gestione su larga scala
+                                </p>
+                            </div>
+                        </div>
+                        <a id="contattaci_button" href="">Contattaci</a>
+                        <p>oppure <a class="pay_now" href="">acquista ora</a></p>
+                        <hr>
+                        <h4>Punti salienti del piano</h4>
+                        <div class="container_opzioni">
+                            <div class="check_icon">
+                                <p id="check_1">&#10003;</p>
+                                <p id="check_8">&#10003;</p>
+                                <p id="check_9">&#10003;</p>
+                            </div>
+                            <div class="text_opzioni">
+                                <p class="opzioni">Cartelle offline su dispositivi
+                                    <br>mobili
+                                </p>
+                                <p class="opzioni">Servizio assistenza 24/h
+                                </p>
+                                <p class="opzioni">Possibilit&#224; di
+                                    personalizzazione totale</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+            </row>
         </div>
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
-        <div class="corpo_p_p"></div>
-        <div class="corpo_p_p"></div>
+
+
+
+
         </row>
         </div>
         <div id="container_piani_pagamento_buttom">
