add piani pagamento

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </section>
         </div>
 
-        <!--piani di pagamento-->
+        <!--piani di pagamento_top-->
         <div id="container_top_card">
             <section id="container_title_pg">
                 <h2 id="titolo_paini_pag">
@@ -97,6 +97,7 @@
                 </div>
             </row>
         </div>
+        <!--piani di pagamento_middle-->
         <div id="container_piani_pagamento_middle">
             <row id="row_p_p_middle">
                 <div class="corpo_p_p">
@@ -140,13 +141,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
                 <div class="corpo_p_p">
                     <div class="container_corpo">
                         <h2 class="titolo_scheda">Advenced</h2>
@@ -201,14 +195,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
                 <div class="corpo_p_p">
                     <div class="container_corpo">
                         <h2 class="titolo_scheda">Enterprice</h2>
@@ -277,67 +263,30 @@
                 </div>
             </row>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-
-
-
-
-        </row>
-        </div>
+        <!--piani di pagamento_bottom-->
         <div id="container_piani_pagamento_buttom">
             <section id="sub_container">
-                <div id="enterprise_top"></div>
-                <div id="enterprise_buttom"></div>
+                <div id="enterprise_top"><i class="fa-solid fa-building"></i>Team</div>
+                <div id="enterprise_buttom">
+                    <h3 id="titolo_enterprise">Enterprise</h3>
+                    <p id="par_str_enterprise"><strong>Contatta l'ufficio vendite per i prezzi</strong></p>
+                    <p>Soluzioni personalizzate e supporto su misura
+                        per aiutare i professionisti IT nella gestione su
+                        <br>qualsiasi scala
+                    </p>
+                </div>
             </section>
         </div>
+        <!--Partners-->
+        <div id="container_partners">
+            <section>
+                <row>
+                    <div>
+                    </div>
+                    <div>
+                    </div>
+                </row>
+            </section>
         </div>
     </main>
     <footer>
