add partners section

--- a/index.html
+++ b/index.html
@@ -279,14 +279,25 @@
         </div>
         <!--Partners-->
         <div id="container_partners">
-            <section>
-                <row>
-                    <div>
-                    </div>
-                    <div>
-                    </div>
-                </row>
-            </section>
+
+            <row id="row_partners">
+                <div id="img_partners">
+                </div>
+                <div id="testo_partners">
+                    <h3 id="titolo_partners">Entra in contatto con un
+                        <br>partner Dropbox
+                    </h3>
+                    <p id="paragrafo_partners">Trova un partner Dropbox e HelloSing
+                        <br>di fiducia. Ottieni le soluzioni per i servizi
+                        <br>necessari per raggiungere i tuoi obiettivi
+                        <br>aziendali, tra cui implementazione,
+                        <br>integrazione, gestione e supporti
+                        <br>continui.
+                    </p>
+                    <a id="button_partners" href="">Trova un partner</a>
+                </div>
+            </row>
+
         </div>
     </main>
     <footer>
