--- a/index.html
+++ b/index.html
@@ -238,28 +238,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 </div>
             </row>
         </div>
@@ -299,10 +277,207 @@
             </row>
 
         </div>
+        <!--Dropbox_buisness-->
+        <div id="main_container_title_db">
+            <div id="container_title_db">
+                <h2 id="title_db">
+                    Esegui pi&#249; oparezioni con Dropbox Buisness
+                </h2>
+            </div>
+        </div>
+        <div id="main_container_db">
+            <row class="row_db">
+                <div class="container_db">
+                    <div id="img_db_1"></div>
+                    <h3 class="title_card_bd">Passa di Meno da uno
+                        <br>strumento all'altro
+                    </h3>
+                    <p>Porta a termine le attivit&#224; quotidiane
+                        <br>con un solo strumento. Crea, modifica e
+                        <br>condividi contenuti cloud da
+                        <br>Documenti, Fogli e Presentazioni di
+                        <br>Google, file Microsoft Office e Dropbox
+                        <br>Paper direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="container_db">
+                    <div id="img_db_2"></div>
+                    <h3 class="title_card_bd">Passa di Meno da uno
+                        <br>strumento all'altro
+                    </h3>
+                    <p>Porta a termine le attivit&#224; quotidiane
+                        <br>con un solo strumento. Crea, modifica e
+                        <br>condividi contenuti cloud da
+                        <br>Documenti, Fogli e Presentazioni di
+                        <br>Google, file Microsoft Office e Dropbox
+                        <br>Paper direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="container_db">
+                    <div id="img_db_3"></div>
+                    <h3 class="title_card_bd">Passa di Meno da uno
+                        <br>strumento all'altro
+                    </h3>
+                    <p>Porta a termine le attivit&#224; quotidiane
+                        <br>con un solo strumento. Crea, modifica e
+                        <br>condividi contenuti cloud da
+                        <br>Documenti, Fogli e Presentazioni di
+                        <br>Google, file Microsoft Office e Dropbox
+                        <br>Paper direttamente da Dropbox.
+                    </p>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </row>
+            <row class="row_db">
+                <div class="container_db">
+                    <div id="img_db_4"></div>
+                    <h3 class="title_card_bd">Passa di Meno da uno
+                        <br>strumento all'altro
+                    </h3>
+                    <p>Porta a termine le attivit&#224; quotidiane
+                        <br>con un solo strumento. Crea, modifica e
+                        <br>condividi contenuti cloud da
+                        <br>Documenti, Fogli e Presentazioni di
+                        <br>Google, file Microsoft Office e Dropbox
+                        <br>Paper direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="container_db">
+                    <div id="img_db_5"></div>
+                    <h3 class="title_card_bd">Passa di Meno da uno
+                        <br>strumento all'altro
+                    </h3>
+                    <p>Porta a termine le attivit&#224; quotidiane
+                        <br>con un solo strumento. Crea, modifica e
+                        <br>condividi contenuti cloud da
+                        <br>Documenti, Fogli e Presentazioni di
+                        <br>Google, file Microsoft Office e Dropbox
+                        <br>Paper direttamente da Dropbox.
+                    </p>
+                </div>
+                <div class="container_db">
+                    <div id="img_db_6"></div>
+                    <h3 class="title_card_bd">Passa di Meno da uno
+                        <br>strumento all'altro
+                    </h3>
+                    <p>Porta a termine le attivit&#224; quotidiane
+                        <br>con un solo strumento. Crea, modifica e
+                        <br>condividi contenuti cloud da
+                        <br>Documenti, Fogli e Presentazioni di
+                        <br>Google, file Microsoft Office e Dropbox
+                        <br>Paper direttamente da Dropbox.
+                    </p>
+                </div>
+            </row>
+        </div>
+        <!--numero di membri-->
+        <div id="main_container_nm">
+            <div id="container_nm">
+                <h2 id="titolo_nm">Pi&#249; di 500.000 team utilizzano
+                    <br>Dropbox Buisness
+                </h2>
+                <a href="">Scopri di pi&#249; sui
+                    nostri clienti
+                </a>
+            </div>
+        </div>
     </main>
     <footer>
-
-
+        <!--link footer-->
+        <row class="row_lf">
+            <div class="container_card_lf">
+                <div class="top_card_lf">
+                    <h4 class="titolo_lf">Dropbox</h4>
+                </div>
+                <div class="buttom_card_lf">
+                    <a class="a_lf" href="">Applicazione Dekstop</a>
+                    <a class="a_lf" href="">Perchè Dropbox</a>
+                    <a class="a_lf" href="">Piani</a>
+                    <a class="a_lf" href="">Sicurezza</a>
+                    <a class="a_lf" href="">Funzioni</a>
+                </div>
+            </div>
+            <div class="container_card_lf">
+                <div class="top_card_lf">
+                    <h4 class="titolo_lf">Prodotti</h4>
+                </div>
+                <div class="buttom_card_lf">
+                    <a class="a_lf" href="">Applicazione Dekstop</a>
+                    <a class="a_lf" href="">Perchè Dropbox</a>
+                    <a class="a_lf" href="">Piani</a>
+                    <a class="a_lf" href="">Sicurezza</a>
+                    <a class="a_lf" href="">Funzioni</a>
+                </div>
+            </div>
+            <div class="container_card_lf">
+                <div class="top_card_lf">
+                    <h4 class="titolo_lf">Azienda</h4>
+                </div>
+                <div class="buttom_card_lf">
+                    <a class="a_lf" href="">Applicazione Dekstop</a>
+                    <a class="a_lf" href="">Perchè Dropbox</a>
+                    <a class="a_lf" href="">Piani</a>
+                    <a class="a_lf" href="">Sicurezza</a>
+                    <a class="a_lf" href="">Funzioni</a>
+                </div>
+            </div>
+            <div class="container_card_lf">
+                <div class="top_card_lf">
+                    <h4 class="titolo_lf">Supporto</h4>
+                </div>
+                <div class="buttom_card_lf">
+                    <a class="a_lf" href="">Applicazione Dekstop</a>
+                    <a class="a_lf" href="">Perchè Dropbox</a>
+                    <a class="a_lf" href="">Piani</a>
+                    <a class="a_lf" href="">Sicurezza</a>
+                    <a class="a_lf" href="">Funzioni</a>
+                </div>
+            </div>
+            <div class="container_card_lf">
+                <div class="top_card_lf">
+                    <h4 class="titolo_lf">Community</h4>
+                </div>
+                <div class="buttom_card_lf">
+                    <a class="a_lf" href="">Applicazione Dekstop</a>
+                    <a class="a_lf" href="">Perchè Dropbox</a>
+                    <a class="a_lf" href="">Piani</a>
+                    <a class="a_lf" href="">Sicurezza</a>
+                    <a class="a_lf" href="">Funzioni</a>
+                </div>
+            </div>
+        </row>
+        <div id="container_linea">
+            <hr id="linea_footer">
+        </div>
+        <div id="container_lingua">
+            <a id="lingua" href="">
+                <i class="fa-solid fa-earth-americas"></i>
+                Italiano
+                <i class="fa-solid fa-caret-up"></i>
+            </a>
+        </div>
     </footer>
 
 </body>
